--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,12 @@
 name: example-environment
 
 dependencies:
-  -python=3.11.0-alpha.3
-  -pymysql=1.0.2
-  -pandas=1.3.5
-  -jpype1=1.3.0
-  -requests=2.26.0
-  -nltk=3.6.7
-  -tomotopy=0.12.2
+  - python=3.11.0-alpha.3
+  - pymysql
+  - pandas
+  - jpype1
+  - requests
+  - nltk
+  - tomotopy
+  - pip:
+    git+https://github.com/blaze/dask.git#egg=dask[complete]
