--- a/environment.yml
+++ b/environment.yml
@@ -9,4 +9,4 @@ dependencies:
   - nltk
   - tomotopy
   - pip:
-    git+https://github.com/blaze/dask.git#egg=dask[complete]
+    - git+https://github.com/blaze/dask.git#egg=dask[complete]
